# django-integrations

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: integrations_ci.yml  integrations_develop.yml  python-test.yml
develop/core/: forms.py  urls.py  views.py
develop/core/templates/core/: credential_list.html  form.html  index.html
develop/develop/: settings.py  urls.py
develop/templates/: base.html
docs/: conf.py  index.rst
docs/modules/: models.rst  views.rst
integrations/: models.py  views.py
integrations/api/: views.py
integrations/migrations/: 0001_initial.py
integrations/templates/integrations/: base.html
src/integrations/: admin.py  apps.py  encrypted_fields.py  models.py  tests.py  urls.py  views.py
src/integrations/api/: seriealizers.py  urls.py  views.py
src/integrations/migrations/: 0001_initial.py
src/integrations/templates/integrations/: index.html
